fix(branding): update rendering for large brand image in nav
- added max-width to not size the image too much on webkits

BBNAV-80

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -196,3 +196,7 @@ h1 {
 .leafletMap {
   height: 320px;
 }
+
+.ct-image {
+  max-width: 90px;
+}
